force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Used to store logs generated for any transactions such as Batchable, Queueable, Web service callouts.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>