force-app/main/default/objects/ErrorLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the apex class where the log is being executed.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>