force-app/main/default/objects/ErrorLog__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>The execution type of the transaction. (Batchable/Queueable/Callout)</description>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Batch</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Queueable</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Callout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>