force-app/main/default/objects/ErrorLog__c/fields/HTTPBody__c.field-meta.xml
<CustomField>
    <fullName>HTTPBody__c</fullName>
    <description>Records the body of the callout before consuming the web service.</description>
    <label>HTTP Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>