force-app/main/default/objects/ErrorLog__c/fields/HTTPResult__c.field-meta.xml
<CustomField>
    <fullName>HTTPResult__c</fullName>
    <description>Records the result of the callout after consuming the web service.</description>
    <label>HTTP Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>