force-app/main/default/objects/ErrorLog__c/fields/HTTPStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HTTPStatusCode__c</fullName>
    <description>Records the result status code of the callout after consuming the web service.</description>
    <label>HTTP Status Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>