force-app/main/default/objects/ErrorLog__c/fields/Log_Hour__c.field-meta.xml
<CustomField>
    <fullName>Log_Hour__c</fullName>
    <formula>MID( TEXT(LogTime__c) ,0, 14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Date Hour</label>
    <type>Text</type>
</CustomField>