force-app/main/default/objects/ErrorLog__c/fields/Log_Hour_Only__c.field-meta.xml
<CustomField>
    <fullName>Log_Hour_Only__c</fullName>
    <formula>(MID( TEXT(LogTime__c) ,12, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Hour</label>
    <type>Text</type>
</CustomField>