force-app/main/default/objects/ErrorLog__c/fields/LogOperationErrors__c.field-meta.xml
<CustomField>
    <fullName>LogOperationErrors__c</fullName>
    <description>GMC Batch : JSON String to Keep track of object IDs that failed to update grouped by Error description</description>
    <label>Log operation errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>