force-app/main/default/objects/ErrorLog__c/fields/LogOperationSummary__c.field-meta.xml
<CustomField>
    <fullName>LogOperationSummary__c</fullName>
    <description>GMC Batch : String to summarise number of successful updates / failures</description>
    <label>Log operation summary</label>
    <type>TextArea</type>
</CustomField>