force-app/main/default/objects/ErrorLog__c/fields/LogTime__c.field-meta.xml
<CustomField>
    <fullName>LogTime__c</fullName>
    <description>Records the timestamp of the transaction currently being executed.</description>
    <label>Log Time</label>
    <type>DateTime</type>
</CustomField>