force-app/main/default/objects/ErrorLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Records the error message of the failed transaction.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>