force-app/main/default/objects/ErrorLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Name of the method from the apex class where the log is being executed.</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>