force-app/main/default/objects/ErrorLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Field to track the operation the transaction(Insert/Update/Delete).</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>upd</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>del</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>ins</fullName>
                <label>Insert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>