force-app/main/default/objects/ErrorLog__c/fields/RS_Type_Erreur__c.field-meta.xml
<CustomField>
    <fullName>RS_Type_Erreur__c</fullName>
    <formula>LEFT( Message__c , 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS_Type_Erreur</label>
    <type>Text</type>
</CustomField>